--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "core",
-  "version": "0.0.0",
-  "description": "> TODO: description",
-  "author": "imeepos <1037483576@qq.com>",
-  "homepage": "https://github.com/notadd/notadd-cli#readme",
-  "license": "ISC",
-  "main": "lib/core.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
-  "publishConfig": {
-    "registry": "https://registry.npm.taobao.org"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/notadd/notadd-cli.git"
-  },
-  "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "bugs": {
-    "url": "https://github.com/notadd/notadd-cli/issues"
-  }
+    "name": "@notadd/cli",
+    "version": "1.0.1",
+    "description": "> TODO: description",
+    "author": "imeepos <1037483576@qq.com>",
+    "homepage": "https://github.com/meepobrother/magnus-cli#readme",
+    "license": "ISC",
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "bin": {
+        "notadd": "lib/bin.js"
+    },
+    "directories": {
+        "lib": "lib",
+        "test": "__tests__"
+    },
+    "files": [
+        "lib"
+    ],
+    "publishConfig": {
+        "registry": "http://registry.npmjs.org",
+        "access": "public"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/meepobrother/magnus-cli.git"
+    },
+    "scripts": {
+        "test": "echo \"Error: run tests from root\" && exit 1"
+    },
+    "bugs": {
+        "url": "https://github.com/meepobrother/magnus-cli/issues"
+    },
+    "dependencies": {
+        "@nger/ast.ts-graphql": "^1.0.5",
+        "@nger/cli": "^1.0.0",
+        "@types/fs-extra": "^8.0.1",
+        "fs-extra": "^8.1.0"
+    }
 }
